# josephine_duba_kanu_rl_summative

./: README.md  SAFEBIRTH_RL_Report.docx  generate_report.py  main.py  pyproject.toml
environment/: __init__.py  custom_env.py
logs/a2c/run_1/: monitor.csv
logs/a2c/run_10/: monitor.csv
logs/a2c/run_2/: monitor.csv
logs/a2c/run_3/: monitor.csv
logs/a2c/run_4/: monitor.csv
logs/a2c/run_5/: monitor.csv
logs/a2c/run_6/: monitor.csv
logs/a2c/run_7/: monitor.csv
logs/a2c/run_8/: monitor.csv
logs/a2c/run_9/: monitor.csv
logs/a2c/tb_1/A2C_1/: events.out.tfevents.1784595192.MACs-MacBook-Air.local.22552.20
logs/a2c/tb_10/A2C_1/: events.out.tfevents.1784595307.MACs-MacBook-Air.local.22552.29
logs/a2c/tb_2/A2C_1/: events.out.tfevents.1784595205.MACs-MacBook-Air.local.22552.21
logs/a2c/tb_3/A2C_1/: events.out.tfevents.1784595219.MACs-MacBook-Air.local.22552.22
logs/dqn/run_1/: monitor.csv
logs/dqn/run_10/: monitor.csv
logs/dqn/run_2/: monitor.csv
logs/dqn/run_3/: monitor.csv
logs/dqn/run_4/: monitor.csv
logs/dqn/run_5/: monitor.csv
logs/dqn/run_6/: monitor.csv
logs/dqn/run_7/: monitor.csv
logs/dqn/run_8/: monitor.csv
logs/dqn/run_9/: monitor.csv
logs/ppo/run_1/: monitor.csv
logs/ppo/run_10/: monitor.csv
logs/ppo/run_2/: monitor.csv
logs/ppo/run_3/: monitor.csv
logs/ppo/run_4/: monitor.csv
logs/ppo/run_5/: monitor.csv
logs/ppo/run_6/: monitor.csv
logs/ppo/run_7/: monitor.csv
logs/ppo/run_8/: monitor.csv
logs/ppo/run_9/: monitor.csv
training/: dqn_training.py  pg_training.py  reinforce_training.py
(+36 files in other folders)
