[project]
name = "josephine-duba-kanu-rl-summative"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "python-docx>=1.2.0",
    "stable-baselines3>=2.9.0",
    "tensorboard>=2.21.0",
]
